--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -154,7 +154,7 @@ Object specific semantics extracted from the scene is able to provide deeper ins
 
 Without a doubt, colour information plays a significant role as a useful semantics as it is often one of the most common information a user provides when they are tasked to describe an object from a given event in a particular scene. However, the process of extracting colour information accurately is extremely challenging, especially in an outdoor setting. In these settings, the white balance of the said scene would appear very differently depending on various factors such as the ambient illumination during the different hours of the day or even weather conditions such as cloudy, rainy or sunshine that may affect the overall scene. Several commercially available product such as 'Nix colour sensor' \cite{nixsensorltd} and 'Adafruit RGB sensor' \cite{adafruit} makes use of an independent light source which has been calibrated as a means to tackle this challenge.
 
-As mentioned, colour terms are commonly derived from the Munsell Colour system. Hence, ideologies and inspirations were drawn from this colour system and applied in this work. However, as previously discussed in Section \ref{section:colorterm}, various colour terms are used in the myriad of available standards. In the computing field, this creates a whole lot of problem as colour terms are often presented with differing definitions and values. Hence, there is a dire need of determining the best way to extract and represent colour values with its corresponding colour terms. 
+As mentioned, colour terms are commonly derived from the Munsell Colour system. Hence, ideologies and inspirations were drawn from this colour system and applied in this work. However, as previously discussed in Section \ref{section:colourterm}, various colour terms are used in the myriad of available standards. In the computing field, this creates a whole lot of problem as colour terms are often presented with differing definitions and values. Hence, there is a dire need of determining the best way to extract and represent colour values with its corresponding colour terms. 
 
 
 
@@ -169,8 +169,7 @@ The Munsell Colour system provided a significant contribution in colour term nam
 
 
 
-Table \ref{table:allcolorterms} lists several famous web colour dictionary along with the number of colour categories available in each of those colour standards. Given that there are so many different colour categories, this ultimately leads to another set of question: "How many colour categories should be extracted for the colour semantic? And why?". In this work, the eleven basic colour terms in English proposed in a classic study of worldwide colour naming by \cite{berlinandkay} was adopted. In their study, Berlin and Kay proposed that the naming of colours terms may differ due to different cultures. Based on their findings, native English language speakers generally used eleven basic colour terms. These terms had to have three common properties which are: i) Highly used, ii) Monolexemic - meaning a single(mono) word, and not compounded colour term such as 'baby blue', and iii) agreed upon by native speakers of the language. With those definitions, the common colour terms proposed for the English language are black, white, gray, brown, red, orange, yellow, purple, green, blue, and pink. 
-
+Table \ref{table:allcolourterms} lists several famous web colour dictionary along with the number of colour categories available in each of those colour standards. Given that there are so many different colour categories, this ultimately leads to another set of question: "How many colour categories should be extracted for the colour semantic? And why?". In this work, the eleven basic colour terms in English proposed by \cite{berlinandkay} was adopted.
 However, the definition of colour terms by themselves are insufficient as it invokes another set of challenge - that is, the representation of these colours in numerical terms, such as RGB values which are typically used in computers. As previously discussed in Section \ref{section:eyes}, each person has a relatively different perception of colour due to the number of cones cells in the retina. This, compounded with the fact that most monitor screens are not colour calibrated professionally provided an opportunity for Munroe \cite{munroe2010color} to perform an internet crowd-sourcing survey on colour terms and their respective numeral representation according to how colours are displayed on typical monitors.
 
 In Munroe's experiments, 222,500 user sessions consisting of 40,000 women and 100,000 men, provided over five million colours according to their respective colour terms. With the collected results, Munroe then proceeds to map a RGB tuple to a particular colour term according to the highest frequency of responses. According to Munroe, the mapping of these terms were done by averaging results of several stochastic hill climbing algorithms. At the end of the experiment, 954 colour terms were assigned to a set of RGB tuples of equal size. Figure \ref{fig:xkcd} shows the mapping of dominant colour terms over three fully saturated faces of the RGB cube. Now, by combining the work of Berlin and Kay along with the work of Munroe, the eleven basic colour terms can now be translated into modern colour tuples using the information collected. These colour terms and the corresponding HEX values are listed in Table \ref{table:colorshex}. In this work, these tabulated values are treated as ground truth for each colour term. 
