--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -348,7 +348,7 @@ A list with a total of 330 video snippets (30 video snippets for each of the 11 
 
 In order to thoroughly evaluate the performance of the colour semantic extraction process which was introduced in Section \ref{section:versiontwoColor}, three other colour modes were included in the evaluation process. These colour modes are variations on how the colour terms are extracted using different colour space and distance metrics. These variations are listed in Table \ref{table:ColorVariation}.    
 
-\begin{table}[]\centering
+\begin{table}[!ht]\centering
 \begin{tabular}{|c|l|}
 \hline
 Color Mode & Distance Metrics \\
@@ -451,7 +451,7 @@ For simple trajectories, the Precision@K scores a high 100\% at the beginning an
 
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
-\begin{table}[] \centering
+\begin{table}[!ht] \centering
 \begin{tabular}{|c|l|}
 \hline
 \multicolumn{1}{|l|}{\textbf{Trajectory Category}} & \textbf{Query Number} \\ \hline
