--- a/llt.bib
+++ b/llt.bib
@@ -35,7 +35,126 @@
   publisher={IEEE}
 }
 
+@inproceedings{jeong2017homogeneity,
+  title={Homogeneity patch search method for efficient vehicle color classification using front-of-vehicle image},
+  author={Jeong, Yoosoo and Park, Kil Houm and Park, Daejin},
+  booktitle={2017 IEEE International Conference on Imaging Systems and Techniques (IST)},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
 
+@article{zhang2017vehicle,
+  title={Vehicle Color Recognition with Vehicle-Color Saliency Detection and Dual-Orientational Dimensionality Reduction of CNN Deep Features},
+  author={Zhang, Qiang and Li, Jiafeng and Zhuo, Li and Zhang, Hui and Li, Xiaoguang},
+  journal={Sensing and Imaging},
+  volume={18},
+  number={1},
+  pages={20},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{kim2008deciding,
+  title={Deciding the number of color histogram bins for vehicle color recognition},
+  author={Kim, Ku-Jin and Park, Sun-Mi and Choi, Yoo-Joo},
+  booktitle={2008 IEEE Asia-Pacific Services Computing Conference},
+  pages={134--138},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{chen2014vehicle,
+  title={Vehicle color recognition on urban road by feature context},
+  author={Chen, Pan and Bai, Xiang and Liu, Wenyu},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={15},
+  number={5},
+  pages={2340--2346},
+  year={2014},
+  publisher={IEEE}
+}
+
+
+@article{hu2015vehicle,
+  title={Vehicle color recognition with spatial pyramid deep learning},
+  author={Hu, Chuanping and Bai, Xiang and Qi, Li and Chen, Pan and Xue, Gengjian and Mei, Lin},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={16},
+  number={5},
+  pages={2925--2934},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{liu2016deep,
+  title={A deep learning-based approach to progressive vehicle re-identification for urban surveillance},
+  author={Liu, Xinchen and Liu, Wu and Mei, Tao and Ma, Huadong},
+  booktitle={European Conference on Computer Vision},
+  pages={869--884},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{liu2016deep2,
+  title={Deep relative distance learning: Tell the difference between similar vehicles},
+  author={Liu, Hongye and Tian, Yonghong and Yang, Yaowei and Pang, Lu and Huang, Tiejun},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={2167--2175},
+  year={2016}
+}
+
+@inproceedings{shen2017learning,
+  title={Learning deep neural networks for vehicle re-id with visual-spatio-temporal path proposals},
+  author={Shen, Yantao and Xiao, Tong and Li, Hongsheng and Yi, Shuai and Wang, Xiaogang},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={1900--1909},
+  year={2017}
+}
+
+@article{van2009learning,
+  title={Learning color names for real-world applications},
+  author={Van De Weijer, Joost and Schmid, Cordelia and Verbeek, Jakob and Larlus, Diane},
+  journal={IEEE Transactions on Image Processing},
+  volume={18},
+  number={7},
+  pages={1512--1523},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{zaslavsky2018efficient,
+  title={Efficient compression in color naming and its evolution},
+  author={Zaslavsky, Noga and Kemp, Charles and Regier, Terry and Tishby, Naftali},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={31},
+  pages={7937--7942},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+@article{yu2018beyond,
+  title={Beyond eleven color names for image understanding},
+  author={Yu, Lu and Zhang, Lichao and van de Weijer, Joost and Khan, Fahad Shahbaz and Cheng, Yongmei and Parraga, C Alejandro},
+  journal={Machine Vision and Applications},
+  volume={29},
+  number={2},
+  pages={361--373},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{ding2015deep,
+  title={Deep feature learning with relative distance comparison for person re-identification},
+  author={Ding, Shengyong and Lin, Liang and Wang, Guangrun and Chao, Hongyang},
+  journal={Pattern Recognition},
+  volume={48},
+  number={10},
+  pages={2993--3003},
+  year={2015},
+  publisher={Elsevier}
+}
 
 
 
@@ -111,16 +230,6 @@ url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
   year={2015}
 }
 
-@article{hu2015vehicle,
-  title={Vehicle color recognition with spatial pyramid deep learning},
-  author={Hu, Chuanping and Bai, Xiang and Qi, Li and Chen, Pan and Xue, Gengjian and Mei, Lin},
-  journal={IEEE Transactions on Intelligent Transportation Systems},
-  volume={16},
-  number={5},
-  pages={2925--2934},
-  year={2015},
-  publisher={IEEE}
-}
 
 @inproceedings{moghimi2014shadow,
   title={Shadow detection based on combinations of HSV color space and orthogonal transformation in surveillance videos},
